@@ -9,11 +9,14 @@ import weka.classifiers.Evaluation;
 import weka.classifiers.trees.J48;
 import weka.core.SerializationHelper;
 
-
-//& 'C:\Program Files\Java\jdk-19\bin\java.exe' --add-opens java.base/java.lang=ALL-UNNAMED '@C:\Users\ttai2\AppData\Local\Temp\cp_ajod6srm5x4r5ffoofl25h39k.argfile' 'classification.ClassifierTreeJ48' 
 public class ClassifierTreeJ48 {
 
     public static void main(String[] args) throws Exception {
+        // Load the ARFF file for original data for cross-validation
+        DataSource sourceOrg = new DataSource("D:\\Documents\\Downloads\\Weka project\\data\\creditcard_scaled.arff");
+        Instances orgData = sourceOrg.getDataSet();
+        orgData.setClassIndex(orgData.numAttributes() - 1);   
+          
         // Load the ARFF file
         DataSource sourceTrain = new DataSource("D:\\Documents\\Downloads\\Weka project\\data\\train_data.arff");
         Instances trainData = sourceTrain.getDataSet();
@@ -29,14 +32,15 @@ public class ClassifierTreeJ48 {
         Instances newData = source.getDataSet();
         //set class attribute
         newData.setClassIndex(newData.numAttributes()-1);
-        
-        //TREE J48
+        //////////////////////////////////////////////////////////////////
+        //               FIRST MODEL FOR TRAIN DATA                     //
+        //////////////////////////////////////////////////////////////////         
+         //TREE J48
         J48 tree =  new J48();
         tree.buildClassifier(trainData);
         System.out.println("Tree J48 Classifier:");
         System.out.println(tree.getCapabilities().toString());
         System.out.println(tree.graph());
-
 
          // Create the directory if it doesn't exist
         File modelDir = new File("D:\\Documents\\Downloads\\Weka project\\models");
@@ -62,7 +66,8 @@ public class ClassifierTreeJ48 {
         // Train the J48 model
         J48 tree2 = new J48();
         tree2.buildClassifier(newData);
-
+        System.out.println("Tree J48 Classifier:");
+        System.out.println(tree2.graph());
         // Save the trained model
         SerializationHelper.write("D:\\Documents\\Downloads\\Weka project\\models\\treeJ48_model2.model", tree2);
 
@@ -70,12 +75,48 @@ public class ClassifierTreeJ48 {
         J48 loadedTree2 = (J48) SerializationHelper.read("D:\\Documents\\Downloads\\Weka project\\models\\treeJ48_model2.model");
 
         // Evaluate the model using cross-validation
+        long startTime = System.currentTimeMillis(); // Record start time
         Evaluation eval2 = new Evaluation(newData);
         eval2.crossValidateModel(loadedTree2, newData, 10, new java.util.Random(1));
+        long endTime = System.currentTimeMillis(); // Record end time
 
+        // Calculate runtime
+         long runtimeMillis = endTime - startTime;
+         double runtimeSeconds = runtimeMillis / 1000.0;       
         // Print summary
         System.out.println(eval2.toSummaryString("=== Summary 2nd Model ===\n", false));
         System.out.println(eval2.toClassDetailsString("=== Detailed Accuracy By Class ===\n"));
-        System.out.println(eval2.toMatrixString("=== Confusion Matrix ===\n"));    
-    }
+        System.out.println(eval2.toMatrixString("=== Confusion Matrix ===\n"));
+        System.out.println("Runtime (seconds): " + runtimeSeconds);
+        
+        //////////////////////////////////////////////////////////////////
+        //               MODEL EVALUATION USING 10FCV                   //
+        //////////////////////////////////////////////////////////////////
+        // Train the J48 model
+        J48 tree3 = new J48();
+        tree3.buildClassifier(orgData);
+        System.out.println("Tree J48 Classifier:");
+        System.out.println(tree3.graph());
+        // Save the trained model
+        SerializationHelper.write("D:\\Documents\\Downloads\\Weka project\\models\\treeJ48_10fcv_model.model", tree3);
+
+        // Load the trained model
+        J48 loadedTree3 = (J48) SerializationHelper.read("D:\\Documents\\Downloads\\Weka project\\models\\treeJ48_10fcv_model.model");
+
+        // Evaluate the model using cross-validation
+        long startTime2 = System.currentTimeMillis(); // Record start time
+        Evaluation eval3 = new Evaluation(orgData);
+        eval3.crossValidateModel(loadedTree3, orgData, 10, new java.util.Random(1));
+        long endTime2 = System.currentTimeMillis(); // Record end time
+
+        // Calculate runtime
+        long runtimeMillis2 = endTime2 - startTime2;
+        double runtimeSeconds2 = runtimeMillis2 / 1000.0;
+
+        // Print summary for the model evaluation
+        System.out.println(eval3.toSummaryString("=== Summary Model Evaluation ===\n", false));
+        System.out.println(eval3.toClassDetailsString("=== Detailed Accuracy By Class ===\n"));
+        System.out.println(eval3.toMatrixString("=== Confusion Matrix ===\n"));  
+        System.out.println("Runtime (seconds): " + runtimeSeconds2);   
+     }
 }
